Added tags to JSON API